--- a/PPw2/CadastroCliente/src/main/webapp/index.xhtml
+++ b/PPw2/CadastroCliente/src/main/webapp/index.xhtml
@@ -1,17 +1,21 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:h="http://xmlns.jcp.org/jsf/html"
-                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/template.xhtml"
-                xmlns:p="http://primefaces.org/ui">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets" 
+      xmlns:p="http://primefaces.org/ui">
 
 
+    <body>
 
-    <ui:define name="conteudo"> 
-        <p>Sistema para cadastro de clientes..</p>
+        <ui:composition   template="/template.xhtml" >
+            <ui:define name="conteudo" class="paragrafo-destaque"> 
+                <p style="color: blue; font-size: 28px; margin-top: 10px; line-height: 1.5;">
+                    Sistema para cadastro de clientes
+                </p>
 
-    </ui:define>
+            </ui:define>
 
-</ui:composition>
-
+        </ui:composition>
+    </body>
+</html>
