--- a/PPw2/CadastroCliente/src/main/webapp/template.xhtml
+++ b/PPw2/CadastroCliente/src/main/webapp/template.xhtml
@@ -24,7 +24,7 @@
                             <p:menuitem value="Cliente" icon="pi pi-fw pi-user-plus"  ajax ="ajax;" action="#{clienteBean.novo()}"  />
                         </p:submenu>
                         <p:divider layout="vertical"/>
-                        <p:menuitem value="Voltar" icon="pi pi-fw pi-chevron-left" url="index.xhtml"/>
+                        <p:menuitem value="Home" icon="pi pi-fw pi-chevron-left" url="index.xhtml"/>
                     </p:menubar>
 
                 </h:form>                               
